# ESP32_DEV

./: .clangd  .cproject  .project  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/BSEC2-Lib/: CMakeLists.txt  bsec_iaq.c  bsec_integration.c  bsec_integration.h  bsec_iot_example.c  commMux.cpp  commMux.h
components/bme68x/: CMakeLists.txt
main/: CMakeLists.txt  bsec_iaq.h  hello_world_main.c
